add docker and complete swagger
